--- a/Frontend-projects/pomodoro/index.html
+++ b/Frontend-projects/pomodoro/index.html
@@ -10,7 +10,7 @@
       <div class="col-md-4 col-md-offset-4">
         <h3>Pomodoro</h3>
         <div class="row">
-          <button class="p-btn">-</button>
+          <button class="p-btn">e-</button>
         </div>
       </div>
     </div>
