--- a/Frontend-projects/pomodoro/index.html
+++ b/Frontend-projects/pomodoro/index.html
@@ -1,18 +1,54 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <title>Pomodoro</title>
     <link rel="stylesheet" href="style/main.css" media="screen" title="no title" charset="utf-8">
-  </head>
-  <body>
-    <div class="row">
-      <div class="col-md-4 col-md-offset-4">
-        <h3>Pomodoro</h3>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+</head>
+<body>
+<div class="row">
+    <div class="col-md-4 col-md-offset-4">
         <div class="row">
-          <button class="p-btn">e-</button>
+            <div class="col-md-12">
+                <button class="p-btn pull-right">settings</button>
+            </div>
         </div>
-      </div>
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <input type="range" min="-10" max="10">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+                <button class="btn btn-default">-</button>
+            </div>
+            <div class="col-md-6">
+                <span>25</span>
+            </div>
+            <div class="col-md-3">
+                <button class="btn btn-default">-</button>
+            </div>
+        </div>
+        <div class="row">
+            <ul class="list-group">
+                <li class="list-group-element"></li>
+                <li class="list-group-element"></li>
+                <li class="list-group-element"></li>
+                <li class="list-group-element"></li>
+                <li class="list-group-element"></li>
+                <li class="list-group-element"></li>
+            </ul>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <button class="btn btn-primary">Start</button>
+            </div>
+            <a href="#" class="btn btn-link">Login</a>
+        </div>
     </div>
-  </body>
+</div>
+</body>
 </html>
