--- a/Frontend-projects/pomodoro/index.html
+++ b/Frontend-projects/pomodoro/index.html
@@ -4,16 +4,17 @@
     <meta charset="utf-8">
     <title>Pomodoro</title>
     <link rel="stylesheet" href="style/main.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" media="screen" title="no title" charset="utf-8">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-<div class="row">
+<div class="row pomodoro">
     <div class="col-md-4 col-md-offset-4">
         <div class="row">
             <div class="col-md-12">
-                <button class="p-btn pull-right">settings</button>
+                <div class="button settings-btn pull-right"><i class="ion-ios-settings"></i></button>
             </div>
         </div>
         <div class="row">
@@ -21,32 +22,37 @@
                 <input type="range" min="-10" max="10">
             </div>
         </div>
-        <div class="row">
+        <div class="row body-container primary-color">
             <div class="col-md-3">
-                <button class="btn btn-default">-</button>
+                <div class="button primary-button">
+                    <i class="ion-ios-minus-outline"></i>
+                </div>
             </div>
             <div class="col-md-6">
-                <span>25</span>
+                <span class="minutes">25</span>
+                <label class="seconds">38</label>
             </div>
             <div class="col-md-3">
-                <button class="btn btn-default">-</button>
+                <div class="button primary-button">
+                    <i class="ion-ios-plus-outline"></i>
+                </div>
             </div>
         </div>
         <div class="row">
-            <ul class="list-group">
-                <li class="list-group-element"></li>
-                <li class="list-group-element"></li>
-                <li class="list-group-element"></li>
-                <li class="list-group-element"></li>
-                <li class="list-group-element"></li>
-                <li class="list-group-element"></li>
+            <ul class="list-group primary-color">
+                <li class="ion-ios-minus session-btn"></li>
+                <li class="ion-ios-checkmark"></li>
+                <li class="ion-ios-circle-filled"></li>
+                <li class="ion-ios-circle-outline"></li>
+                <li class="ion-ios-circle-outline"></li>
+                <li class="ion-ios-plus session-btn"></li>
             </ul>
         </div>
         <div class="row">
             <div class="col-md-12">
-                <button class="btn btn-primary">Start</button>
+                <button class="start-button">Start</button>
             </div>
-            <a href="#" class="btn btn-link">Login</a>
+            <div class="faded-button small">Login</a>
         </div>
     </div>
 </div>
