--- a/Frontend-projects/pomodoro/index.html
+++ b/Frontend-projects/pomodoro/index.html
@@ -1,60 +1,60 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>Pomodoro</title>
-    <link rel="stylesheet" href="style/main.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" media="screen" title="no title" charset="utf-8">
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-</head>
-<body>
-<div class="row pomodoro">
-    <div class="col-md-4 col-md-offset-4">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="button settings-btn pull-right"><i class="ion-ios-settings"></i></button>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <input type="range" min="-10" max="10">
-            </div>
-        </div>
-        <div class="row body-container primary-color">
-            <div class="col-md-3">
-                <div class="button primary-button">
-                    <i class="ion-ios-minus-outline"></i>
+    <head>
+        <meta charset="utf-8">
+        <title>Pomodoro</title>
+        <link rel="stylesheet" href="style/main.css" media="screen" title="no title" charset="utf-8">
+        <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" media="screen" title="no title" charset="utf-8">
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+            integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        </head>
+        <body>
+            <div class="row pomodoro">
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="button settings-btn pull-right"><i class="ion-ios-settings"></i></button>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 col-md-offset-3">
+                                <input type="range" min="-10" max="10">
+                            </div>
+                        </div>
+                        <div class="row body-container primary-color">
+                            <div class="col-md-3">
+                                <div class="button primary-button decrease">
+                                    <i class="ion-ios-minus-outline"></i>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <span class="minutes"></span>
+                                <label class="seconds"></label>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="button primary-button increase">
+                                    <i class="ion-ios-plus-outline"></i>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <ul class="list-group primary-color" id="sessions">
+                                <li class="ion-ios-minus session-btn" data-value="decrease"></li>
+                                <div class="dots">
+                                </div>
+                                <li class="ion-ios-plus session-btn" data-value="increase"></li>
+                            </ul>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <button class="start-button">Start</button>
+                            </div>
+                        <div class="faded-button small">Login</a>
+                    </div>
                 </div>
             </div>
-            <div class="col-md-6">
-                <span class="minutes">25</span>
-                <label class="seconds">38</label>
-            </div>
-            <div class="col-md-3">
-                <div class="button primary-button">
-                    <i class="ion-ios-plus-outline"></i>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <ul class="list-group primary-color">
-                <li class="ion-ios-minus session-btn"></li>
-                <li class="ion-ios-checkmark"></li>
-                <li class="ion-ios-circle-filled"></li>
-                <li class="ion-ios-circle-outline"></li>
-                <li class="ion-ios-circle-outline"></li>
-                <li class="ion-ios-plus session-btn"></li>
-            </ul>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <button class="start-button">Start</button>
-            </div>
-            <div class="faded-button small">Login</a>
-        </div>
-    </div>
-</div>
-</body>
-</html>
+        </body>
+        <script type="text/javascript" src="./js/jquery-3.1.0.min.js"></script>
+        <script type="text/javascript" src="./js/main.js"></script>
+    </html>
