--- a/Frontend-projects/pomodoro/index.html
+++ b/Frontend-projects/pomodoro/index.html
@@ -48,7 +48,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <button class="start-button">Start</button>
+                                <button class="start-button" onclick="start();">Start</button>
                             </div>
                         <div class="faded-button small">Login</a>
                     </div>
@@ -56,5 +56,6 @@
             </div>
         </body>
         <script type="text/javascript" src="./js/jquery-3.1.0.min.js"></script>
+        <script type="text/javascript" src="./js/moment.min.js"></script>
         <script type="text/javascript" src="./js/main.js"></script>
     </html>
