--- a/Frontend-projects/pomodoro/index.html
+++ b/Frontend-projects/pomodoro/index.html
@@ -6,8 +6,7 @@
         <link rel="stylesheet" href="style/main.css" media="screen" title="no title" charset="utf-8">
         <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" media="screen" title="no title" charset="utf-8">
         <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-            integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         </head>
         <body>
             <div class="row pomodoro">
@@ -19,7 +18,7 @@
                         </div>
                         <div class="row">
                             <div class="col-md-6 col-md-offset-3">
-                                <input type="range" min="-10" max="10">
+                                <input type="range" id="ranger" min="-20" max="20">
                             </div>
                         </div>
                         <div class="row body-container primary-color">
