added the functionality to play with the computer and the functionality when all the fields are filled it will be defined as a draw !

--- a/Frontend-projects/tictac/index.html
+++ b/Frontend-projects/tictac/index.html
@@ -27,40 +27,14 @@
         <div class="col s12 m6">
             <div class="card horizontal">
                 <ul class="board">
-                    <li class="item game-btn waves-effect " data-error="wrong">
-                        <i class="material-icons f4"></i>
-                    </li>
-                    <li class="item game-btn waves-effect">
-                        <i class="material-icons f4"></i>
-                    </li>
-                    <li class="item game-btn waves-effect">
-                        <i class="material-icons f4"></i>
-                    </li>
-                    <li class="item game-btn waves-effect">
-                        <i class="material-icons f4"></i>
-                    </li>
-                    <li class="item game-btn waves-effect">
-                        <i class="material-icons f4"></i>
-                    </li>
-                    <li class="item game-btn waves-effect">
-                        <i class="material-icons f4"></i>
-                    </li>
-                    <li class="item game-btn waves-effect">
-                        <i class="material-icons f4"></i>
-                    </li>
-                    <li class="item game-btn waves-effect">
-                        <i class="material-icons f4"></i>
-                    </li>
-                    <li class="item game-btn waves-effect">
-                        <i class="material-icons f4"></i>
-                    </li>
+                    <!--Here will be rendered the blocks!-->
                 </ul>
             </div>
             <div class="col m12 center-align">
                 <!-- Modal Trigger -->
                 <button data-target="modal1" class="btn modal-trigger prime play-btn" onclick="play()">Play</button>
+                <button class="btn new-game" onclick="newGame()">New Game</button>
             </div>
-            <a class="btn" onclick="Materialize.toast('I am a toast', 4000,'',function(){alert('Your toast was dismissed')})">Toast!</a>
 
             <!-- Modal Structure -->
             <div id="modal1" class="modal" style="width: 38%;">
