--- a/Frontend-projects/tictac/index.html
+++ b/Frontend-projects/tictac/index.html
@@ -23,6 +23,10 @@
                 Your Character
                 <i class="material-icons your-character-place">none</i>
             </div>
+            <div class="chip">
+                Computer's Character
+                <i class="material-icons pc-character-place">none</i>
+            </div>
         </div>
         <div class="col s12 m6">
             <div class="card horizontal">
@@ -33,7 +37,7 @@
             <div class="col m12 center-align">
                 <!-- Modal Trigger -->
                 <button data-target="modal1" class="btn modal-trigger prime play-btn" onclick="play()">Play</button>
-                <button class="btn new-game" onclick="newGame()">New Game</button>
+                <button class="btn new-game prime" onclick="newGame()">New Game</button>
             </div>
 
             <!-- Modal Structure -->
