--- a/Frontend-projects/tictac/index.html
+++ b/Frontend-projects/tictac/index.html
@@ -36,8 +36,8 @@
             </div>
             <div class="col m12 center-align">
                 <!-- Modal Trigger -->
-                <button data-target="modal1" class="btn modal-trigger prime play-btn" onclick="play()">Play</button>
-                <button class="btn new-game prime" onclick="newGame()">New Game</button>
+                <button data-target="modal1" class="left btn modal-trigger prime play-btn" onclick="play()">Play</button>
+                <button class="btn new-game prime right" onclick="newGame()">New Game</button>
             </div>
 
             <!-- Modal Structure -->
